# CID

./: CMakeLists.txt  README.md
WIP_localization/: TDOA.m
computer_config/: config.sh  performance_metrics.csv  performance_metrics.sh
django/cid_webapp/: manage.py
django/cid_webapp/cid_webapp/: asgi.py  settings.py  urls.py  (+1 more)
localization/: TDOA.m  TimeStamp_SweepingFrequency.cpp  crosscorrelation2.m
localization/TDOA_cpp/: TDOA.cpp
ml/: ConstellationandPSDplotter.ipynb  lte_band2_samples.csv
nugget/: nugget.cpp  nugget.py
signal_processing/: 2702Tonesamples.csv  2702Tonesamples.mat  signalprocessing.m  tone_k_factor.asv  tone_k_factor.m
src-area/: RxwFunctions.cpp  RxwFunctions.hpp  SignalDataService.hpp  StreamServerCore.cpp  StreamServerCore.hpp  TrackingService.hpp  main.cpp  serverApp
src-area/flask/: app.py  cid.db
src-area/tools/: fake_client.cpp
src-client/: RxwFunctions.cpp  SignalDataService.cpp  SignalDataService.hpp  ToneRX.cpp  main.cpp
src-deployment/nugget/: SweepRX.cpp  ToneTX  ToneTX.cpp  main.cpp  nugget_main  workingRXsweep.cpp
src-tdoa/: CMakeLists.txt  CrossCorrelation.cpp  CrossCorrelation.hpp  RxwFunctions.cpp  RxwFunctions.hpp  SignalDataService.cpp  SignalDataService.hpp  SignalProcessor.cpp  SignalProcessor.hpp  StreamServerCore.cpp  StreamServerCore.hpp  TDOA.cpp  TDOA.hpp  TrackingService.cpp  TrackingService.hpp  main.cpp
src-tdoa/flask/: app.py  cid.db
src-tdoa/flask/templates/: index.html
src-tdoa/flask/tools/: db_test  db_test.cpp  db_test.py
src-tdoa/tools/: fake_client.cpp  get_raspberry_pi_ips.sh
(+2 files in other folders)
